// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Form Component Component Form has been selected matchers DOM Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <h2
          class="form-heading"
        >
          Edit Book
        </h2>
        <form
          class="book-form"
        >
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Title
              <input
                class="input-content"
                name="title"
                type="text"
                value="Book 1"
              />
            </label>
          </div>
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Author
              <input
                class="input-content"
                name="author"
                type="text"
                value="Author 1"
              />
            </label>
          </div>
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Price
              <input
                class="input-content"
                name="price"
                type="text"
                value="0"
              />
            </label>
          </div>
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Description
              <textarea
                class="textarea-content"
                id="desc"
                name="desc"
                rows="3"
              >
                Description
              </textarea>
            </label>
          </div>
          <div
            class="uploader"
          >
            <label
              class="uploader-title"
            >
              Image
              <div
                class="uploader-input"
              >
                <input
                  class="uploader-content"
                  data-testid="uploader-img"
                  name="image"
                  type="file"
                />
                <img
                  class="uploader-image"
                  src="base_img"
                />
              </div>
            </label>
          </div>
          <div
            class="group-btn"
            data-testid="btn-submit"
          >
            <button
              class="button btn-secondary btn-small"
              type="button"
            >
              Edit
            </button>
            <button
              class="button btn-warning btn-small"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <h2
        class="form-heading"
      >
        Edit Book
      </h2>
      <form
        class="book-form"
      >
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Title
            <input
              class="input-content"
              name="title"
              type="text"
              value="Book 1"
            />
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Author
            <input
              class="input-content"
              name="author"
              type="text"
              value="Author 1"
            />
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Price
            <input
              class="input-content"
              name="price"
              type="text"
              value="0"
            />
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Description
            <textarea
              class="textarea-content"
              id="desc"
              name="desc"
              rows="3"
            >
              Description
            </textarea>
          </label>
        </div>
        <div
          class="uploader"
        >
          <label
            class="uploader-title"
          >
            Image
            <div
              class="uploader-input"
            >
              <input
                class="uploader-content"
                data-testid="uploader-img"
                name="image"
                type="file"
              />
              <img
                class="uploader-image"
                src="base_img"
              />
            </div>
          </label>
        </div>
        <div
          class="group-btn"
          data-testid="btn-submit"
        >
          <button
            class="button btn-secondary btn-small"
            type="button"
          >
            Edit
          </button>
          <button
            class="button btn-warning btn-small"
            type="button"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Form Component Component Form matchers DOM Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <h2
          class="form-heading"
        >
          Create New Book
        </h2>
        <form
          class="book-form"
        >
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Title
              <input
                class="input-content"
                name="title"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Author
              <input
                class="input-content"
                name="author"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Price
              <input
                class="input-content"
                name="price"
                type="text"
                value="0"
              />
            </label>
          </div>
          <div
            class="input"
          >
            <label
              class="input-title"
            >
              Description
              <textarea
                class="textarea-content"
                id="desc"
                name="desc"
                rows="3"
              />
            </label>
          </div>
          <div
            class="uploader"
          >
            <label
              class="uploader-title"
            >
              Image
              <div
                class="uploader-input"
              >
                <input
                  class="uploader-content"
                  data-testid="uploader-img"
                  name="image"
                  type="file"
                />
              </div>
            </label>
          </div>
          <div
            class="group-btn"
            data-testid="btn-submit"
          >
            <button
              class="button btn-secondary btn-small"
              type="button"
            >
              Create
            </button>
            <button
              class="button btn-warning btn-small"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <h2
        class="form-heading"
      >
        Create New Book
      </h2>
      <form
        class="book-form"
      >
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Title
            <input
              class="input-content"
              name="title"
              type="text"
              value=""
            />
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Author
            <input
              class="input-content"
              name="author"
              type="text"
              value=""
            />
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Price
            <input
              class="input-content"
              name="price"
              type="text"
              value="0"
            />
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="input-title"
          >
            Description
            <textarea
              class="textarea-content"
              id="desc"
              name="desc"
              rows="3"
            />
          </label>
        </div>
        <div
          class="uploader"
        >
          <label
            class="uploader-title"
          >
            Image
            <div
              class="uploader-input"
            >
              <input
                class="uploader-content"
                data-testid="uploader-img"
                name="image"
                type="file"
              />
            </div>
          </label>
        </div>
        <div
          class="group-btn"
          data-testid="btn-submit"
        >
          <button
            class="button btn-secondary btn-small"
            type="button"
          >
            Create
          </button>
          <button
            class="button btn-warning btn-small"
            type="button"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
